<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context="mobi.storedot.quizapp.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/snow3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp">

            <TextView
                style="@style/QuestionTitle"
                android:text="@string/Q1" />

            <RadioGroup
                android:id="@+id/rQ1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/trueQ1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/trueQ1"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorAccent" />

                <RadioButton
                    android:id="@+id/falseQ1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/falseQ1"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorAccent" />
            </RadioGroup>

            <TextView
                style="@style/QuestionTitle"
                android:text="@string/Q2" />

            <CheckBox
                android:id="@+id/q2a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/q2Answer1"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/q2a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/q2Answer2"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/q2a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/q2Answer3"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <TextView
                style="@style/QuestionTitle"
                android:text="@string/Q3" />

            <CheckBox
                android:id="@+id/q3a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/q3Answer1"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/q3a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/q3Answer2"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/q3a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/q3Answer3"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <TextView
                style="@style/QuestionTitle"
                android:text="@string/Q4" />

            <EditText
                android:id="@+id/q4a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintEdit1"
                android:inputType="textNoSuggestions"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/onclickSubmitResults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="onclickSubmitResults"
                android:text="@string/score" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>

